# Kihson

./: .gitignore  README.md  meson.build
lib/: kihson.c  kihson.h  kihson_lexer.c  kihson_lexer.h  kihson_parser.c  kihson_parser.h  kihson_string.c  kihson_string.h
res/: example1.json  example2.json
src/: main.c
